--- a/trunk/mobile_portal/mobile_portal/templates/core/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/index.xhtml
@@ -61,7 +61,7 @@
         <img src="{{ MEDIA_URL }}png/oucs-logo-small.png" alt="Oxford University Computing Services"/>
         <img src="{{ MEDIA_URL }}gif/brandmark.gif" alt="University of Oxford" />
     </div>
-        {% endif %}
+        {% endifequal %}
     </div>
 
 {% if 1 %}
