--- a/trunk/mobile_portal/mobile_portal/templates/maps/nearby_detail.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/maps/nearby_detail.xhtml
@@ -41,9 +41,18 @@
 <div class="note"><div class="bubble pad-10">{{ entity_type.note }}</div></div>
 {% endif %}
 
-<div class="backgrounded-image" style="background-image:url('{% url osm_generated_map map_hash %}'); height:{{ map_height }}px">
-{% include "maps/map_elements.xhtml" %}
-</div>
+
+
+{% ifnotequal style_group "dumb" %}
+    <div class="backgrounded-image" style="background-image:url('{% url osm_generated_map map_hash %}'); height:{{ map_height }}px">
+    {% include "maps/map_elements.xhtml" %}
+    </div>
+{% else %}
+    <img src="{% url osm_generated_map map_hash %}" alt="Map"><br />
+    {% include "maps/map_elements.xhtml" %}
+{% endifnotequal %}
+
+
 
 <ul>
 {% if entities %}
