--- a/trunk/mobile_portal/mobile_portal/templates/z3950/item_detail.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/z3950/item_detail.xhtml
@@ -80,7 +80,13 @@
     </div></div> 
 
 {% if map_hash %}
-    <div class="backgrounded-image" style="background-image:url('{% url osm_generated_map map_hash %}'); height:{{ map_height }}px;"> </div>
+    {% ifnotequal style_group "dumb" %}
+        <div class="backgrounded-image" style="background-image:url('{% url osm_generated_map map_hash %}'); height:{{ map_height }}px;"> </div>
+    {% else %}
+        <img src="{% url osm_generated_map map_hash %}" alt="Map">
+    {% endifnotequal %}
+
+
 {% endif %}
 
     <ul>
