--- a/trunk/mobile_portal/mobile_portal/templates/z3950/search_form.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/z3950/search_form.xhtml
@@ -1,34 +1,29 @@
+{% ifnotequal style_group "dumb"  %}
 <style>
-
 #library-search {
     padding:10px;
 }
-
 #library-search table {
     width:100%;
     border-collapse:collapse;
     color: #ffffff;
 }
-
-
 #library-search th {
     width:4em;
     padding-right: 5px;
     text-align: right;
 }
-
 #library-search td {
     padding-right:5px;
 }
-
 #library-search tbody input{
     width:100%;
     padding:3px;
     border:0px solid black;
     font-size: 1.4em;
 }
-
 </style>
+{% endifnotequal %}
 
 <div class="section">
   <h2>Search Oxford University Libraries</h2>
