--- a/trunk/mobile_portal/mobile_portal/site-media/css/groups/dumb.css
+++ b/trunk/mobile_portal/mobile_portal/site-media/css/groups/dumb.css
@@ -1,6 +1,6 @@
 body {
-    background:#fff0f0;
-    text-align: left;1
+    background:#ffffff;
+    text-align: left;
 }
 
 /* Index Page Specific 
@@ -9,10 +9,31 @@ body {
     -- Written in order of use on index.html
 */
 
+h1 {
+    font-size: 0.8em;
+    padding: 0; margin: 0;
+}
+
+h2 { font-size: 0.8em; 
+     padding: 0; margin: 0;
+}
+
+p {
+    padding: 1px;
+}
+
 ol {
     text-align: left;
 }
 
+ul li {
+    padding: 2px 0;
+}
+div.section {
+    padding: 3px;
+    margin: 3px 0;
+    background-color: #f0f0f0;
+}
 
 
 div#index-header {
@@ -26,6 +47,3 @@ div#index-search {
 
 }
 
-div.section {
-    padding: 3px;
-}
