--- a/trunk/mobile_portal/mobile_portal/templates/core/update_location_embed.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/update_location_embed.xhtml
@@ -26,9 +26,17 @@
 <h2>Did you mean:</h2>
 
 {% if map_url %}
-<div class="backgrounded-image" style="background-image:url('{{ map_url }}'); height:{{ map_height }}px">
-{% include "maps/map_elements.xhtml" %}
-</div>
+
+{% ifnotequal style_group "dumb" %}
+    <div class="backgrounded-image" style="background-image:url('{{ map_url }}'); height:{{ map_height }}px">
+    {% include "maps/map_elements.xhtml" %}
+    </div>
+{% else %}
+    <img src="{{ map_url }}}" alt="Map"><br />
+    {% include "maps/map_elements.xhtml" %}
+{% endifnotequal %}
+
+
 {% endif %}
 
 <ul>
