--- a/trunk/mobile_portal/mobile_portal/templates/maps/busstop.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/maps/busstop.xhtml
@@ -53,9 +53,17 @@
 </div></div>
 {% endif %}
 
-<div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ map_height }}px">
-{% include "maps/map_elements.xhtml" %}
-</div>
+
+{% ifnotequal style_group "dumb" %}
+    <div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ map_height }}px">
+    {% include "maps/map_elements.xhtml" %}
+    </div>
+{% else %}
+    <img src="{% map_url entity.location %}" alt="Map"><br />
+    {% include "maps/map_elements.xhtml" %chr}
+{% endifnotequal %}
+
+
 
 <ul>
     <li class="round-bottom">
