--- a/trunk/mobile_portal/mobile_portal/templates/maps/osm/base.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/maps/osm/base.xhtml
@@ -17,9 +17,17 @@
 <div class="section">
 <h2>{{ entity.title }}</h2>
 
-<div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ map_height }}px">
-{% include "maps/map_elements.xhtml" %}
-</div>
+
+{% ifnotequal style_group "dumb" %}
+    <div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ map_height }}px">
+    {% include "maps/map_elements.xhtml" %}
+    </div>
+{% else %}
+    <img src="{% map_url entity.location %}" alt="Map"><br />
+    {% include "maps/map_elements.xhtml" %}
+{% endifnotequal %}
+
+
 
 {% if entity|osm_tags %}
 <table class="section-table">
