--- a/trunk/mobile_portal/mobile_portal/templates/maps/oxpoints.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/maps/oxpoints.xhtml
@@ -103,9 +103,16 @@
 <div class="section">
     <h2>Map</h2>
 	{% if entity.location %}
-	<div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ map_height }}px">
-		{% include "maps/map_elements.xhtml" %}
-	</div>
+	
+	{% ifnotequal style_group "dumb" %}
+    	<div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ map_height }}px">
+    		{% include "maps/map_elements.xhtml" %}
+    	</div>
+    {% else %}
+        <img src="{% map_url entity.location %}" alt="Map"><br />
+        {% include "maps/map_elements.xhtml" %}
+    {% endifnotequal %}
+    
 	<ul>
 	    <li class="round-bottom"><a href="{% url maps_entity_nearby_list entity.entity_type.slug,entity.display_id %}" rel="nofollow">Find things near here</a></li>
 	</ul>
