--- a/trunk/mobile_portal/mobile_portal/templates/maps/update_osm.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/maps/update_osm.xhtml
@@ -50,9 +50,15 @@
     <em>&quot;{{ entity.title }}&quot;</em>.
   </div>
   
-<div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ map_height }}px">
-{% include "maps/map_elements.xhtml" %}
-</div>
+  {% ifnotequal style_group "dumb" %}
+    <div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ map_height }}px">
+    {% include "maps/map_elements.xhtml" %}
+    </div>
+  {% else %}
+      <img src="{% map_url entity.location %}" alt="Map"><br />
+      {% include "maps/map_elements.xhtml" %}
+  {% endifnotequal %}
+  
 
 </div>
 
