--- a/trunk/mobile_portal/mobile_portal/templates/z3950/item_holdings_detail.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/z3950/item_holdings_detail.xhtml
@@ -61,9 +61,16 @@
 <div class="section">
     <h2>{{ library.location|join:" - " }}</h2>
 {% if library.oxpoints_id and library.oxpoints_location %}
-    <div class="backgrounded-image" style="background-image:url('{% map_url library.oxpoints_location %}'); height:{{ map_height }}px">
+    {% ifnotequal style_group "dumb" %}
+    	<div class="backgrounded-image" style="background-image:url('{% map_url library.oxpoints_location %}'); height:{{ map_height }}px">
+            {% include "maps/map_elements.xhtml" %}
+        </div>
+    {% else %}
+        <img src="{% map_url library.oxpoints_location %}" alt="Map"><br />
         {% include "maps/map_elements.xhtml" %}
-    </div>
+    {% endifnotequal %}
+    
+    
 {% endif %}
 
     <ul>
