--- a/trunk/mobile_portal/mobile_portal/templates/base.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/base.xhtml
@@ -18,8 +18,9 @@
 {% ifnotequal style_group "dumb" %}
     <script src="{{ MEDIA_URL }}js/jquery-1.3.2.js"  type="text/javascript"> </script>
     <script type="text/javascript">
-        require_location = {{ require_location|yesno:"true,false" }};
-        base = "{% url core_index %}";
+        var require_location = {{ require_location|yesno:"true,false" }};
+        var base = "{% url core_index %}";
+        var positionName = {% if preferences.location.name %}"{{ preferences.location.name|escapejs }}"{% else %}null{% endif %};
     </script>
     <script src="{{ MEDIA_URL }}js/groups/{{ style_group }}.js"  type="text/javascript"> </script>
 {% endifnotequal %}
