--- a/trunk/mobile_portal/mobile_portal/templates/z3950/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/z3950/index.xhtml
@@ -9,14 +9,7 @@
         
 <div class="section">
     <h2>Maps</h2>
-	<div class="note">
-		{% if preferences.location.location %}
-		<div class="bubble pad-10">
-		We think you are near <strong class="location_name">{{ preferences.location.placemark.0 }}</strong>. If this is not correct, please <a class="location_update_link" href="{% url core_update_location %}?return_url={{ path }}">update your location</a>. </div>
-		{% else %}
-			<div class="bubble pad-10">We do not yet have a location for you. Please <a class="location_update_link" href="{% url core_update_location %}?return_url={{ return_url|urlencode }}">update your location</a>.</div>
-		{% endif %}
-		</div>
+	{% include "core/update_location_embed.xhtml" %}
     <ul>
         <li><a href="{% url maps_category_detail "ulibrary" %}">List of libraries</a></li>
         <li class="round-bottom"><a href="{% url maps_nearby_detail "ulibrary" %}">Libraries near me</a></li>
