--- a/tags/0.2/mobile_portal/mobile_portal/templates/404.html
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/404.html
@@ -7,9 +7,12 @@
 {% block title %}m.ox | 404 Not Found{% endblock %}
 
 {% block content %}
-<div class="front-section">
+<div class="section">
+	<h2>404 Error</h2>
+	<div class="note"><div class="bubble pad-10">
     <p>Sorry, we couldn't find what you're looking for.</p>
     <p>Perhaps you'd like to head back to <a href="http://m.ox.ac.uk/">the home page</a>?</p>
+	</div></div>
 </div>
 {% endblock %}
 
