--- a/tags/0.2/mobile_portal/mobile_portal/templates/base.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/base.xhtml
@@ -15,8 +15,13 @@
 	<meta name="format-detection" content="telephone=no" />
 {% endif %}
 
-{% ifnotequal style_group "generic" %}
+{% ifnotequal style_group "dumb" %}
     <script src="{{ MEDIA_URL }}js/jquery-1.3.2.js"  type="text/javascript"> </script>
+    <script type="text/javascript">
+        var require_location = {{ require_location|yesno:"true,false" }};
+        var base = "{% url core_index %}";
+        var positionName = {% if preferences.location.name %}"{{ preferences.location.name|escapejs }}"{% else %}null{% endif %};
+    </script>
     <script src="{{ MEDIA_URL }}js/groups/{{ style_group }}.js"  type="text/javascript"> </script>
 {% endifnotequal %}
     <link  rel="stylesheet" href="{{ MEDIA_URL }}css/groups/{{ style_group }}.css" type="text/css" />
@@ -28,31 +33,44 @@
 
 
 {% block header %}
-<div id="bc-header">
-	<ol id="bc">	
-		<li><a href="{% url core_index %}">
-	        <img src="{{ MEDIA_URL }}png/logo.png" alt="Home"/>
+
+{% ifnotequal style_group "dumb" %}
+    <div id="bc-header">
+      <ol id="bc">
+        <li><a href="{% url core_index %}">
+          <img src="{{ MEDIA_URL }}png/logo.png" alt="Home"/>
         </a></li>
-{% if breadcrumbs.2 %}
+    {% if breadcrumbs.2 %}
         <li><a href="{{ breadcrumbs.1.1 }}" title="{{ breadcrumbs.1.0 }}">
-            <img src="{{ MEDIA_URL }}png/index-icons/{{ breadcrumbs.0 }}-bc.png" alt="{{ breadcrumb.1.0 }}"/>
+          <img src="{{ MEDIA_URL }}png/index-icons/{{ breadcrumbs.0 }}-bc.png" alt="{{ breadcrumb.1.0 }}"/>
         </a></li>
-{% if not breadcrumbs.3 %}
+    {% if not breadcrumbs.3 %}
         <li><a href="{{ breadcrumbs.2.1 }}" title="{{ breadcrumbs.2.0 }}">
-            &hellip;
+          &hellip;
         </a></li>
-{% endif %}
-
-{% endif %}
-
-    </ol> 
-    <h1 id="bc-title" class="{% if not breadcrumbs.2 %}{{ breadcrumbs.0 }}-header with-icon{% endif %}">
-		{{ breadcrumbs.4 }}
-	</h1>
-	
-	{{ breadcrumbs }}
-</div>
-
+    {% endif %}{% endif %}
+      </ol> 
+      <div id="bc-title">
+        <h1 class="{% if not breadcrumbs.2 %}{{ breadcrumbs.0 }}-header with-icon{% endif %}">
+          {{ breadcrumbs.4 }}
+        </h1>
+      </div>
+    </div>
+{% else %}
+    <div id="bc-header">
+           <a href="{% url core_index %}">m.ox</a>
+       {% if breadcrumbs.2 %}
+           / <a href="{{ breadcrumbs.1.1 }}" title="{{ breadcrumbs.1.0 }}">{{ breadcrumbs.1.0 }}</a>
+       {% if not breadcrumbs.3 %}
+            / <a href="{{ breadcrumbs.2.1 }}" title="{{ breadcrumbs.2.0 }}">&hellip;</a>
+       {% endif %}{% endif %}
+         <div id="bc-title">
+           <h1>
+             {{ breadcrumbs.4 }}
+           </h1>
+         </div>
+       </div>
+{% endifnotequal %}
 
 
 {% endblock %}
