--- a/tags/0.2/mobile_portal/mobile_portal/templates/core/index.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/core/index.xhtml
@@ -1,28 +1,32 @@
 {% extends "core/base.xhtml" %}
 {% load portal_misc %}{% load maps %}
 
-{% block stylesheets %}
-
-{% endblock %}
-
+{% block title %}Mobile Oxford{% endblock %}
 
 {% block header %}
 <div id="index-header">
     <div id="index-title">
 		<!-- <img src="{{ MEDIA_URL }}png/headers/{{ device.resolution_width|header_width }}.png" alt="Mobile Oxford"/> -->
-        <img src="{{ MEDIA_URL }}png/new/logos/logo-128x51-TRMargin-5px.png" alt="Mobile Oxford"/>
+		{% ifequal style_group "dumb" %}
+		    <img src="{{ MEDIA_URL }}png/new/logos/logo-90x55.jpg" alt="Mobile Oxford">
+		{% else %}
+            <img src="{{ MEDIA_URL }}png/new/logos/logo-128x51-TRMargin-5px.png" alt="Mobile Oxford"/>
+        {% endifequal %}
     </div>
     <div id="index-search">
 	     <form method="get" action="{% url googlesearch_index %}">
 		 <p>
 			{{ search_form.query }}
+		{% ifequal style_group "dumb" %}
+		    <input alt="Search" type="button" value="Search" />
+		{% else %}
 			<input alt="Search" type="image" src="{{ MEDIA_URL }}png/new/buttons/search-button.png" title="Search" />
+		{% endifequal %}
 		 </p>
 		 </form>
 	</div>
 </div>	
 {% endblock %}
-
 
 
 {% block content %}
@@ -47,14 +51,20 @@
 			{% endif %}
             <li class="round-bottom"><a href="{% url core_feedback %}?referer={% url core_index %}">Provide feedback</a></li>
     </ul>
+
     <div class="center">
+        {% ifequal style_group "dumb" %}
+            Produced by Oxford University Computing Services <br /><a href="http://www.oucs.ox.ac.uk">www.oucs.ox.ac.uk</a>
+        {% else %}
     <div class="bubble" style="padding:8px;">
+    
         <img src="{{ MEDIA_URL }}png/oucs-logo-small.png" alt="Oxford University Computing Services"/>
         <img src="{{ MEDIA_URL }}gif/brandmark.gif" alt="University of Oxford" />
     </div>
+        {% endifequal %}
     </div>
 
-{% if user.is_superuser %}
+{% if 1 %}
         <hr/>
         <div class="section">
             <h2>Session</h2>
@@ -70,6 +80,12 @@
             <p>{{ device.brand_name }} {{ device.model_name }} ({{ device.devid }})</p>
             <p>{{ device.devua }}</p>
             <p>{{ ua }}</p>
+			<p>{{ parents }}</p>
+			</div>
+            <h2>Browser</h2>
+			<div class="bubble pad-10">
+            <p>{{ browser.brand_name }} {{ browser.model_name }} ({{ browser.devid }})</p>
+            <p>{{ browser.devua }}</p>
 			</div>
         </div>
     
@@ -93,5 +109,7 @@
 			</div>
         </div>        
 {% endif %}
+
+
 
 {% endblock %}
