--- a/tags/0.2/mobile_portal/mobile_portal/templates/core/update_location_confirm.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/core/update_location_confirm.xhtml
@@ -1,28 +1,28 @@
+<p>Did you mean&hellip;</p>
 
-<div class="list-section">
-
-<h2>Did you mean:</h2>
-
-{% if map_hash %}
-<div class="backgrounded-image" style="background-image:url('{% url osm_generated_map map_hash %}'); height:{{ map_height|default:device.max_image_height }}px">
-{% include "maps/map_elements.xhtml" %}
-</div>
+{% if map_url %}
+{% ifnotequal style_group "dumb" %}
+    <div class="backgrounded-image" style="background-image:url('{{ map_url }}'); height:{{ map_height }}px">
+    {% include "maps/map_elements.xhtml" %}
+    </div>
+{% else %}
+    <img src="{{ map_url }}}" alt="Map"><br />
+    {% include "maps/map_elements.xhtml" %}
+{% endifnotequal %}
 {% endif %}
 
-<input type="hidden" name="location" value="{{ location }}"/>
-<ul class="ml">
-{% for option in options %}
+<ul>
+{% for placemark in placemarks %}
     <li>
-        <form method="post" action="." class="submit-location-form">
-            <input type="hidden" name="title" value="{{ option.0 }}"/>
-            <input type="hidden" name="latitude" value="{{ option.1.0 }}"/>
-            <input type="hidden" name="longitude" value="{{ option.1.1 }}"/>
-            <input type="hidden" name="accuracy" value="{{ option.2 }}"/>
+        <form method="post" action="{% url core_update_location %}" class="submit-location-form">
+            <input type="hidden" name="name" value="{{ placemark.0 }}"/>
+            <input type="hidden" name="latitude" value="{{ placemark.1.0 }}"/>
+            <input type="hidden" name="longitude" value="{{ placemark.1.1 }}"/>
+            <input type="hidden" name="accuracy" value="{{ placemark.2 }}"/>
+            <input type="hidden" name="method" value="geocoded"/>
             <input type="hidden" name="return_url" value="{{ return_url|default:"" }}"/>
-            <button class="as_link" type="submit" name="index" style="width:100%">{{ forloop.counter }}. {{ option.0 }}</button>
+            <button class="submit-location-form-button" type="submit" name="index" style="width:100%">{{ forloop.counter }}. {{ placemark.0 }}</button>
         </form>
     </li>
 {% endfor %}
 </ul>
-
-</div>
