--- a/tags/0.2/mobile_portal/mobile_portal/templates/maps/busstop.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/maps/busstop.xhtml
@@ -14,14 +14,6 @@
 {% endblock %}
 
 
-{% block breadcrumbs %}
-{{ block.super }}
-	<li><a href="{% url maps_index %}">
-        {% if dumb %}Maps{% else %}<img src="{{ MEDIA_URL }}png/index-icons/maps-bc.png" alt="Maps"/>{% endif %}
-    </a></li>
-    <li><a href="{% url maps_nearby_detail entity.entity_type.slug %}" alt="Bus stops">{% if dumb %}Bus stops{% else %}&hellip;{% endif %}</a></li>
-{% endblock %}
-
 {% block pagetitle %}Bus stop{% endblock %}
 
 {% block content %}
@@ -29,8 +21,9 @@
 <div class="section">
 	<h2><small>{{ entity.title }}<br /><span id="time_now">{% now "G:i:s "%}</span></small></h2>
 
-	
+
 {% if services %}
+<div class="article"><div class="bubble pad-5">
 <table class="section-table">
     <thead style="display:none;">
         <tr>
@@ -52,7 +45,7 @@
 {% endfor %}
     </tbody>
 </table>
-
+</div></div>
 
 {% else %}
 <div class="note"><div class="bubble pad-10">
@@ -60,9 +53,17 @@
 </div></div>
 {% endif %}
 
-<div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ device.max_image_height }}px">
-{% include "maps/map_elements.xhtml" %}
-</div>
+
+{% ifnotequal style_group "dumb" %}
+    <div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ map_height }}px">
+    {% include "maps/map_elements.xhtml" %}
+    </div>
+{% else %}
+    <img src="{% map_url entity.location %}" alt="Map"><br />
+    {% include "maps/map_elements.xhtml" %chr}
+{% endifnotequal %}
+
+
 
 <ul>
     <li class="round-bottom">
