--- a/tags/0.2/mobile_portal/mobile_portal/templates/maps/oxpoints.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/maps/oxpoints.xhtml
@@ -18,7 +18,7 @@
 
 <div class="section">
 	<h2>{{ data.dc_title }}</h2>
-
+<div class="article"><div class="bubble pad-5">
 	<dl>
 	{% if data.oxp_hasHomepage or data.oxp_hasITHomepage or data.oxp_hasWeblearn or data.oxp_hasLibraryHomepage %}
 		<dt>Websites</dt>
@@ -87,6 +87,7 @@
 		{% endfor %}
 	{% endif %}
 	</dl>
+	</div></div>
 </div>
 
 {% if data.oxp_inImage %}
@@ -102,9 +103,16 @@
 <div class="section">
     <h2>Map</h2>
 	{% if entity.location %}
-	<div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ device.max_image_height }}px">
-		{% include "maps/map_elements.xhtml" %}
-	</div>
+	
+	{% ifnotequal style_group "dumb" %}
+    	<div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ map_height }}px">
+    		{% include "maps/map_elements.xhtml" %}
+    	</div>
+    {% else %}
+        <img src="{% map_url entity.location %}" alt="Map"><br />
+        {% include "maps/map_elements.xhtml" %}
+    {% endifnotequal %}
+    
 	<ul>
 	    <li class="round-bottom"><a href="{% url maps_entity_nearby_list entity.entity_type.slug,entity.display_id %}" rel="nofollow">Find things near here</a></li>
 	</ul>
