--- a/tags/0.2/mobile_portal/mobile_portal/templates/z3950/index.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/z3950/index.xhtml
@@ -9,17 +9,10 @@
         
 <div class="section">
     <h2>Maps</h2>
-	<div class="note">
-		{% if preferences.location.location %}
-		<div class="bubble pad-10">
-		We think you are near <strong class="location_name">{{ preferences.location.placemark.0 }}</strong>. If this is not correct, please <a class="location_update_link" href="{% url core_update_location %}?return_url={{ path }}">update your location</a>. </div>
-		{% else %}
-			<div class="bubble pad-10">We do not yet have a location for you. Please <a class="location_update_link" href="{% url core_update_location %}?return_url={{ return_url|urlencode }}">update your location</a>.</div>
-		{% endif %}
-		</div>
+	{% include "core/update_location_embed.xhtml" %}
     <ul>
-        <li><a href="{% url maps_category_detail "library" %}">List of libraries</a></li>
-        <li class="round-bottom"><a href="{% url maps_nearby_detail "library" %}">Libraries near me</a></li>
+        <li><a href="{% url maps_category_detail "ulibrary" %}">List of libraries</a></li>
+        <li class="round-bottom"><a href="{% url maps_nearby_detail "ulibrary" %}">Libraries near me</a></li>
     </ul>
 </div>
 
@@ -31,9 +24,6 @@
         <li><a class="phone" href="tel:+441865277162">Telephone<br/><small>01865 (2)77162</small></a></li>
     </ul>
 
-    <div class="note"><div class="bubble pad-10">
-        Please note that the following links are not optimised for mobile devices.
-    </div></div>
     <ul>
         <li><a class="external" href="http://www.ouls.ox.ac.uk/">OULS <small>(Oxford University Library Services)</small></a></li>
         <li><a class="external" href="http://solo.ouls.ox.ac.uk/">SOLO <small>(Search Oxford Libraries Online)</small></a></li>
