--- a/tags/0.2/mobile_portal/mobile_portal/templates/z3950/search_form.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/z3950/search_form.xhtml
@@ -1,25 +1,67 @@
+{% ifnotequal style_group "dumb"  %}
+<style>
+#library-search {
+    padding:10px;
+}
+#library-search table {
+    width:100%;
+    border-collapse:collapse;
+    color: #ffffff;
+}
+#library-search th {
+    width:4em;
+    padding-right: 5px;
+    text-align: right;
+}
+#library-search td {
+    padding-right:5px;
+}
+#library-search tbody input{
+    width:100%;
+    padding:3px;
+    border:0px solid black;
+    font-size: 1.4em;
+}
+</style>
+{% endifnotequal %}
+
 <div class="section">
-    <h2>Search</h2>
-    <div class="note"><div class="bubble pad-10">
-        Search OLIS by either some subset of title and author, or by ISBN.
+  <h2>Search Oxford University Libraries</h2>
+  <div class="note"><div class="bubble pad-10">
+    Search OLIS by either some subset of title and author, or by ISBN.
 {% if not device.has_qwerty_keyboard %} You may use a '*' in place of an 'X' in an ISBN.{% endif %}
-    </div></div>
-	<div id="library-search">
+  </div></div>
+
+  <div id="library-search">
     <form method="get" action="{% url z3950_search %}">
+      <table>
+        <tbody>
+          <tr>
+            <th>{{ search_form.title.label_tag }}:</th>
+            <td>{{ search_form.title }}</td>
+          </tr>
 
-		<ul>
-			<li>{{ search_form.title.label }}
-			{{ search_form.title }}</li>
-		
-			<li>{{ search_form.author.label }}
-	        {{ search_form.author }}</li>
+          <tr>
+            <th>{{ search_form.author.label_tag }}:</th>
+            <td><div>{{ search_form.author }}</div></td>
+          </tr>
+    
+          <tr>
+            <th>{{ search_form.isbn.label_tag }}:</th>
+            <td><div>{{ search_form.isbn }}</div></td>
+          </tr>
+        </tbody>
+        
+        <tfoot>
+          <tr>
+            <td colspan="2">
+              <input type="submit" value="Search"/>
+              <input type="reset" value="Reset"/>
+            </td>
+          </tr>
+        </tfoot>
+      </table>
 
-			<li>{{ search_form.isbn.label }}
-	        {{ search_form.isbn }}</li>
-		</ul>
-	
-		<input type="submit" value="Search"/>
-	    <input type="reset" value="Reset"/>
     </form>
-	</div>
+  </div>
 </div>
