--- a/tags/0.2/mobile_portal/mobile_portal/templates/core/update_location_embed.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/core/update_location_embed.xhtml
@@ -14,7 +14,7 @@
 <div class="location-container">
   <span class="location-status">We do not yet know where you are.</span>
   <span class="location-action"> </span>
-</divp>
+</div>
 {% endif %}
 
 <div class="update-location">
