--- a/trunk/mobile_portal/mobile_portal/templates/base.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/base.xhtml
@@ -15,7 +15,7 @@
 	<meta name="format-detection" content="telephone=no" />
 {% endif %}
 
-{% ifnotequal style_group "dumb" %}
+{% if use_javascript %}
     <script src="{{ MEDIA_URL }}js/jquery-1.3.2.js"  type="text/javascript"> </script>
     <script type="text/javascript">
         var require_location = {{ require_location|yesno:"true,false" }};
