--- a/trunk/mobile_portal/mobile_portal/templates/base.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/base.xhtml
@@ -23,7 +23,7 @@
         var positionName = {% if preferences.location.name %}"{{ preferences.location.name|escapejs }}"{% else %}null{% endif %};
     </script>
     <script src="{{ MEDIA_URL }}js/groups/{{ style_group }}.js"  type="text/javascript"> </script>
-{% endifnotequal %}
+{% endif %}
     <link  rel="stylesheet" href="{{ MEDIA_URL }}css/groups/{{ style_group }}.css" type="text/css" />
 	<link rel="icon" type="image/png" href="{{ MEDIA_URL }}png/favicon.png"/>
 {% block extrahead %}{% endblock %}
