--- a/trunk/mobile_portal/mobile_portal/templates/oucs_status/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/oucs_status/index.xhtml
@@ -2,16 +2,18 @@
 
 {% block content %}
 
-<ul>
+<div class="section">
+  <ul>
 {% for service in services %}
-  <li class="service_status_{{ service.status }}">
-    <span class="service_name">{{ service.name }}</span>
-    <span class="service_status">{{ service.status|capfirst }}</span>
+    <li class="service_status service_status_{{ service.status }}{% if forloop.first %} round_top{% endif %}{% if forloop.last %} round_bottom{% endif %}">
+      <span class="service_name">{{ service.name }}</span>
+      <span class="service_status">{{ service.status|capfirst }}</span>
 {% if service.detail %}
-    <span class="service_detail">{{ service.detail }}</span>
+      <span class="service_detail">{{ service.detail }}</span>
 {% endif %}
-  </li>
+    </li>
 {% endfor %}
-</ul>
+  </ul>
+</div>
 
 {% endblock %}
