correcting alt tag on home page input box

--- a/tags/0.2/mobile_portal/mobile_portal/templates/core/index.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/core/index.xhtml
@@ -18,9 +18,9 @@
 		 <p>
 			{{ search_form.query }}
 		{% ifequal style_group "dumb" %}
-		    <input alt="Search" type="submit" value="Search" />
+		    <input type="button" value="Search" />
 		{% else %}
-			<input alt="Search" type="image" src="{{ MEDIA_URL }}png/new/buttons/search-button.png" title="Search" />
+			<input type="image" src="{{ MEDIA_URL }}png/new/buttons/search-button.png" title="Search" />
 		{% endifequal %}
 		 </p>
 		 </form>
@@ -64,7 +64,7 @@
         {% endifequal %}
     </div>
 
-{% if 0 %}
+{% if 1 %}
         <hr/>
         <div class="section">
             <h2>Session</h2>
