added meta UTF-8

--- a/trunk/mobile_portal/mobile_portal/templates/base.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/base.xhtml
@@ -5,7 +5,7 @@
 <head>
 	<title>{% block title %}m.ox | {{ breadcrumbs.4 }}{% endblock %}</title>
     <meta name="viewport" content="width=device-width; initial-scale=1; user-scalable=no; maximum-scale=1; minimum-scale=1"/>
-
+    <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
 {% if device|device_has_parent:"apple_iphone_ver1" %}
     <link rel="apple-touch-icon" href="{{ MEDIA_URL}}png/apple-touch-icon.png"/>
