--- a/tags/0.2/mobile_portal/mobile_portal/templates/maps/osm/base.xhtml
+++ b/tags/0.2/mobile_portal/mobile_portal/templates/maps/osm/base.xhtml
@@ -60,7 +60,7 @@
 {% endif %}
 {% if entity.metadata.tags.url %}
     <li>
-        <a class="external" href="{{ entity.metadata.tags.url|urlencode }}">
+        <a class="external" href="{{ entity.metadata.tags.url|escape }}">
             Website
         </a>
     </li>
